# LogWatcher

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
cmake/: headerlist.cmake  sourcelist.cmake  version.rc.in
cmake/lib/: autoCollectSources.cmake  copyOutputs.cmake
include/: SKSEMenuFramework.h  aggregator.hpp  color.hpp  config.hpp  documents.hpp  helper.hpp  live.hpp  loading.hpp  logger.hpp  mail.hpp  notification.hpp  plugin.hpp  restart.hpp  settings.hpp  settings_def.hpp  settings_json.hpp  state.hpp  statistics.hpp  table.hpp  utils.hpp  watcher.hpp  window.hpp
src/: aggregator.cpp  live.cpp  loading.cpp  mail.cpp  notification.cpp  plugin.cpp  restart.cpp  settings.cpp  settings_json.cpp  settings_ui.cpp  table.cpp  watcher.cpp  window.cpp
